<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aaa"
    tools:context=".menu_record">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/IN" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/OUT" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/TOTAL" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <org.fabiomsr.moneytextview.MoneyTextView
                android:id="@+id/in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="$0"
                android:textSize="22dp"

                app:symbol="$"
                app:baseTextColor="#8E8E8E"/>
            <org.fabiomsr.moneytextview.MoneyTextView
                android:id="@+id/out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:symbol="$"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="$0"
                android:textSize="22dp"

                app:baseTextColor="#8E8E8E"
                />
            <org.fabiomsr.moneytextview.MoneyTextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:symbol="$"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="$0"
                android:textSize="22dp"

                app:baseTextColor="#8E8E8E"
                />
        </LinearLayout>

        <Button
            android:id="@+id/build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="on_builddata"
            android:text="@string/BUILD" />

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</RelativeLayout>